# llm-fake-news-classification

./: .gitignore  README.md  REAME.md
TTS/: .env.yaml  Dockerfile  fast_app_v2.py  readme.md  requirements.txt
TTS/core/: __init__.py
TTS/core/vn/: syllables.json
TTS/core/vnabc/phonemizers/: __init__.py  base.py
data/: QD2053_new_edited .json  SoTayGV_edited.json  SoTayHV_edited.json  processed_QD2053_new_edited .json  processed_SoTayGV_edited.json  processed_SoTayHV_edited.json
elasticsearch-cluster/: Dockerfile  docker-compose.yaml
elasticsearch-cluster/config/: elasticsearch.yml
elasticsearch-vector-store/: .env.example  .gitignore  Dockerfile  README.md  app.py  config.py  document_embedding.py  llm_inference.py  pyproject.toml  requirements.txt  rules_base.json  speech2text.py  text2speech.py  text_clean.py
elasticsearch-vector-store/.streamlit/: config.toml
elasticsearch-vector-store/api/: logger_helper.py  main.py  model.py  test.py
elasticsearch-vector-store/data/: .gitignore  QD2053_new .json  ThongTinChungHV.json
elasticsearch-vector-store/data/processed/: QD2053_new.json  SO_TAY_HV.json  SoTayGV.json  wiki.json
elasticsearch-vector-store/test/: QA_SoTayGV.xlsx  QA_SoTayHV.xlsx  QA_wiki_QD2053.xlsx
models/: .gitignore
